--- a/config.json
+++ b/config.json
@@ -1,19 +1,24 @@
 {
-    "channel_masks":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+    "channel_masks":[1,0,0,0,
+	             0,0,0,0,
+		     0,0,0,0,
+		     0,0,0,0,
+		     0,0,0,0],
     "comparator_thresholds":
     {
-        "high":2,
-        "med":2.1,
-        "low":2.2,
-        "tot":2.3,
-        "attn_tot":2.4
+        "High":2,
+        "Med":2.2,
+        "Low":2.4,
+        "Tot":2.6,
+        "AttnTot":2.8
     },
     "comparator_widths":
     {
-        "high":1,
-        "med":1.1,
-        "low":1.2,
-        "tot":1.3,
-        "attn_tot":1.4
+        "High":1,
+        "Med":1.1,
+        "Low":1.2,
+        "Tot":1.3,
+        "AttnTot":1.4
     }
 }
+
