added communication with DAQ

--- a/config_all_channels_on.json
+++ b/config_all_channels_on.json
@@ -1,14 +1,15 @@
 {
-    "channel_masks":[1,1,1,1,
-	             1,1,1,1, 
-		     1,1,1,1, 
-		     1,1,1,1, 
-		     1,1,1,1],
+    "channel_masks":
+    	[1,1,1,1,
+	 1,1,1,1, 
+	 1,1,1,1, 
+	 1,1,1,1, 
+	 1,1,1,1],
     "comparator_thresholds":
     {
-        "High":0.1,
-        "Med":0.1,
-        "Low":0.1,
+        "High":0.2,
+        "Med":0.2,
+        "Low":0.2,
         "Tot":0.1,
         "AttnTot":0.1
     },
